# stock_autotrade

./: .dockerignore  .gitignore  AGENTS.md  GEMINI.md  README.md  README_en.md  pyproject.toml  results.csv
.agent/skills/docker-runner/: SKILL.md
.codex/skills/docker-runner/: SKILL.md
.devcontainer/: devcontainer.json  init-gpu.sh
.github/skills/docker-runner/: SKILL.md
docker/: Dockerfile  build-docker.sh  docker-compose.gpu.yml  docker-compose.yml  run-docker.sh
environments/docker/: Dockerfile  build-docker.sh  docker-compose.yml  pyproject.ruff.toml  run-docker.sh
environments/python/: pyproject.toml
scripts/: run_parameter_search.py  run_simple_ma_backtest.py  run_stock_screener.py
src/stock_autotrade/: __init__.py  constants.py  exceptions.py
src/stock_autotrade/backtest/: __init__.py  engine.py  metrics.py  runner.py
src/stock_autotrade/data/: __init__.py  cache.py  loader.py  screener.py  ticker_protocols.py
src/stock_autotrade/strategy/: __init__.py  exponential_moving_average.py  rsi.py  simple_moving_average.py
src/stock_autotrade/strategy/optimization/: __init__.py  base.py  grid_search.py  objective.py
src/stock_autotrade/utils/: __init__.py  py.typed
tests/: conftest.py  test_backtest.py  test_cache.py  test_ema_strategy.py  test_exceptions.py  test_loader.py  test_metrics.py  test_parameter_search.py  test_rsi_strategy.py  test_run_parameter_search.py  test_run_stock_screener.py  test_screener.py
